--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,3 +23,12 @@ dev_dependencies:
 flutter: 
   uses-material-design: true
 
+  fonts:
+    - family: NunitoSans
+      fonts:
+        - asset: assets/fonts/NunitoSans-Bold.ttf
+        - asset: assets/fonts/NunitoSans-Regular.ttf
+
+  assets:
+    - assets/
+    - assets/fonts/
