--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.viniciusvianna.challenge_movies">
+    <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
         android:label="challenge_movies"
         android:name="${applicationName}"
