--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
-        android:label="challenge_movies"
+        android:label="Challenge Movies"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
