--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   dartz: 0.10.1
   flutter_feather_icons: 2.0.0+1
   shimmer: 2.0.0
+  cached_network_image: 3.2.1
   flutter: 
     sdk: flutter
 
